# coco

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  PRIVACY.md  README.md  build_sensing_server.py  build_tutor_server.py  example_readme.md  pyproject.toml
.github/workflows/: release.yml
desktop/: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
desktop/.erb/scripts/: build-python.js  copy-services.ts  notarize.mjs
desktop/assets/: icon.icns
desktop/release/app/: package-lock.json  package.json
desktop/src/__tests__/: DebugDisplay.test.tsx  NotificationView.test.tsx  SessionChatContext.test.tsx  SessionChatView.test.tsx  TutorStream.test.ts
desktop/src/main/: activity-store.ts  main.ts  menu.ts  preload.ts
desktop/src/main/services/: config.json  manager.ts  observation-stream.ts  tutor-stream.ts
desktop/src/renderer/: App.css  App.tsx  index.tsx
desktop/src/renderer/components/: NotificationView.tsx  ObservationBubble.tsx  OnboardingView.css  OnboardingView.tsx  PetSprite.tsx  SessionChatView.tsx  SessionSetupView.tsx  activity-rollup.ts  observation-types.ts
lib/external_api/: README.md  pyproject.toml
lib/external_api/external_api/: litellm_api.py  litellm_test.py  llm.py  llm_metrics_test.py  llm_router_api.py  llm_router_api_test.py  lm_studio_api.py  lm_studio_api_test.py  oa_api.py  oa_api_test.py  tinfoil_api.py  tinfoil_api_test.py  tinker_api.py  tinker_test.py  types.py
lib/memory/: README.md  pyproject.toml
lib/memory/memory/: __init__.py  engine.py  models.py  paths.py  prompts.py  store.py
lib/memory/memory/tests/: test_memory.py
lib/memory_mcp/: README.md  pyproject.toml
lib/memory_mcp/memory_mcp/: __init__.py  client.py  server.py
lib/memory_mcp/memory_mcp/tests/: chat_with_memory_mcp.py  test_server.py
lib/proactive_tutor/: README.md  pyproject.toml
lib/proactive_tutor/proactive_tutor/: ai_tool_capabilities.py  html_executor.py  instant_suggestion.py  instant_suggestion_test.py  python_executor.py  tutor_server.py  tutor_system.py  tutor_system_test.py  tutor_types.py
lib/proactive_tutor/proactive_tutor/agents/: diagnostic.py  observer.py  tutor.py  tutor_test.py
lib/proactive_tutor/proactive_tutor/prompts_everyday/: diagnostic.txt  instant_suggestion.txt  tutor.txt
lib/proactive_tutor/proactive_tutor/prompts_problem_solving/: diagnostic.txt  tutor.txt  viz_fixer.txt
lib/py_utils/: README.md  pyproject.toml
lib/py_utils/py_utils/: logging.py  symbol_serialize.py  training_recorder.py  training_recorder_test.py
lib/sensing/: README.md  pyproject.toml
lib/sensing/sensing/: activity.py  gum.py  language.py  observer.py  progress_detector.py  screen.py  segment_processor.py  sensing_server.py  streamer.py  utils.py
lib/sensing/sensing/prompts_everyday/: judge.txt  observer.txt
lib/sensing/sensing/prompts_problem_solving/: judge.txt  observer.txt
lib/sensing/tests/: test_activity.py  test_drift_judgment.py  test_memory_wiring.py  test_observation_status.py  test_progress_judgment.py  test_screen_inspection.py
