[project]
name = "external_api"
version = "0.1.0"
description = "API for calling external services like LLM provider."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm[caching]>=1.77.5",
    "lmstudio>=1.5.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
