[project]
name = "memory"
version = "0.1.0"
description = "GUM-style episodic memory and proposition retrieval for Coco."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "external_api",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory"]

[tool.uv.sources]
external_api = { workspace = true }

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
