[project]
name = "memory-mcp"
version = "0.1.0"
description = "Local MCP retrieval server for Coco's long-term memory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "memory",
    "mcp[cli]>=1.8.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
coco-memory-mcp = "memory_mcp.server:main"
coco-memory-query = "memory_mcp.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_mcp"]

[tool.uv.sources]
memory = { workspace = true }

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
