[project]
name = "proactive_tutor"
version = "0.1.0"
description = "Tutor agent that obverses the user screen and provides multimodal feedback."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Workspace siblings
    "external_api",
    "py_utils",
    "memory-mcp",
    # Web server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "chz>=0.3.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
external_api = { workspace = true }
py_utils = { workspace = true }
memory-mcp = { workspace = true }

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
