[project]
name = "sensing"
version = "0.1.0"
description = "Sensing layer that tracks human computer-use activities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Workspace siblings
    "external_api",
    "py_utils",
    "memory",
    # Web server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "chz>=0.3.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    # Screen / input capture
    "mss>=10.1.0",
    "shapely>=2.1.2",
    "aiosqlite",
    "greenlet",
    "sqlalchemy>=2.0.0",
    "opencv-python",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pynput>=1.8.1; sys_platform != 'linux'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "redis[asyncio]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
external_api = { workspace = true }
py_utils = { workspace = true }
memory = { workspace = true }

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
